--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-pdf": "^4.0.5",
+    "react-scroll": "^1.7.12",
     "three": "^0.104.0"
   },
   "devDependencies": {
