--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
+    "build": "rimraf dist && webpack --mode production",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -20,7 +20,8 @@
     "react-dom": "^16.13.0",
     "react-pdf": "^4.1.0",
     "react-scroll": "^1.7.16",
-    "three": "^0.104.0"
+    "three": "^0.104.0",
+    "url-loader": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
